# ieee_financial_fraud_detection

./: README.md  app.py  auth_config.yaml  db.py  ieee_fraud_detection.ipynb  predict_fraud.ipynb  project_structure.txt  pyproject.toml  requirements.txt  sentinel.db  temp_model.ubj
artifacts/: freq_maps_sample.pkl  uid_agg_live.parquet  uid_agg_sample.parquet
