[project]
name = "ieee-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy",
    "pandas",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pyspark",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
