[project]
name = "ieee-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "streamlit-option-menu",
    "streamlit-authenticator",
    "pyyaml",
    "matplotlib>=3.10.8",
    "numpy",
    "pandas",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pyvis>=0.3.2",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "lightgbm",
]
